force-app/main/default/objects/CreditBalanceAdjustment__c/CreditBalanceAdjustment__c.object-meta.xml
<CustomObject>
    <label>Credit Balance Adjustment</label>
    <nameField>
        <label>Credit Balance Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Balance Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>