force-app/main/default/objects/CreditBalanceAdjustment__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Credit Balance Adjustments</relationshipLabel>
    <relationshipName>Credit_Balance_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>