force-app/main/default/objects/CreditBalanceAdjustment__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Credit Balance Adjustments</relationshipLabel>
    <relationshipName>Credit_Balance_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>