force-app/main/default/objects/CreditBalanceAdjustment__c/fields/Refund__c.field-meta.xml
<CustomField>
    <fullName>Refund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund</label>
    <referenceTo>Refund__c</referenceTo>
    <relationshipLabel>Credit Balance Adjustments</relationshipLabel>
    <relationshipName>Credit_Balance_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>