force-app/main/default/objects/CreditBalanceAdjustment__c/fields/SourceTransactionType__c.field-meta.xml
<CustomField>
    <fullName>SourceTransactionType__c</fullName>
    <label>Source Transaction Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>